src/pages/App/Deposit/style.scss
.deposit-page {
  .cp-modal {
    .dialogue {
      width: 35%;
      max-height: 500px;
      @media screen and (max-width: 676px) {
        width: 65%; 
      }  
      @media screen and (max-width: 676px) {
        width: 65%; 
      }  
      @media screen and (max-width: 500px) {
        width: 75%; 
      } 
      @media screen and (max-width: 428px) {
        width: 90%; 
      } 
    }
  }

  .new-payment{
    &.selected{
      border: 2px solid var(--blue);
    }
  }

  .deposit-offcanvas{
    .h6{
      font-size: 14px!important;
    }
  }
}

